split games by date
