# project/routes/users.js
@@ -3,16 +3,17 @@ var router = express.Router();
 const DButils = require("./utils/DButils");
 const users_utils = require("./utils/users_utils");
 const players_utils = require("./utils/players_utils");
+const games_utils = require("./utils/games_utils")
 
 /**
  * Authenticate all incoming requests by middleware
  */
 router.use(async function (req, res, next) {
-  if (req.session && req.session.user_id) {
-    DButils.execQuery("SELECT user_id FROM users_db")
+  if (req.session && req.session.username) {
+    DButils.execQuery("SELECT username FROM dbo.users_db")
       .then((users) => {
-        if (users.find((x) => x.user_id === req.session.user_id)) {
-          req.user_id = req.session.user_id;
+        if (users.find((x) => x.username === req.session.username)) {
+          req.username = req.session.username;
           next();
         }
       })
@@ -27,9 +28,9 @@ router.use(async function (req, res, next) {
  */
 router.post("/favoritePlayers", async (req, res, next) => {
   try {
-    const user_id = req.session.user_id;
+    const username = req.session.username;
     const player_id = req.body.playerId;
-    await users_utils.markPlayerAsFavorite(user_id, player_id);
+    await users_utils.markPlayerAsFavorite(username, player_id);
     res.status(201).send("The player successfully saved as favorite");
   } catch (error) {
     next(error);
@@ -41,9 +42,9 @@ router.post("/favoritePlayers", async (req, res, next) => {
  */
 router.get("/favoritePlayers", async (req, res, next) => {
   try {
-    const user_id = req.session.user_id;
+    const username = req.session.username;
     let favorite_players = {};
-    const player_ids = await users_utils.getFavoritePlayers(user_id);
+    const player_ids = await users_utils.getFavoritePlayers(username);
     let player_ids_array = [];
     player_ids.map((element) => player_ids_array.push(element.player_id)); //extracting the players ids into array
     const results = await players_utils.getPlayersInfo(player_ids_array);
@@ -52,5 +53,33 @@ router.get("/favoritePlayers", async (req, res, next) => {
     next(error);
   }
 });
+
+router.post("/favoriteGames", async (req, res, next) => {
+  try {
+    const username = req.session.username;
+    const gameid = req.body.gameID;
+    await users_utils.markGamesAsFavorite(username, gameid);
+    res.status(201).send("The game successfully saved as favorite");
+  } catch (error) {
+    next(error);
+  }
+});
+
+/**
+ * This path returns the favorites games that were saved by the logged-in user
+ */
+router.get("/favoriteGames", async (req, res, next) => {
+  try {
+    const username = req.session.username;
+    const games_ids = await users_utils.getFavoriteGames(username);
+    let games_ids_array = [];
+    games_ids.map((element) => games_ids_array.push(element.game_id)); //extracting the games ids into array
+    const results = await games_utils.getGamesInfo(games_ids_array); 
+    res.status(200).send(results);
+  } catch (error) {
+    next(error);
+  }
+});
+
 
 module.exports = router;
