# project/routes/utils/users_utils.js
@@ -2,7 +2,7 @@ const DButils = require("./DButils");
 
 async function markPlayerAsFavorite(user_id, player_id) {
   await DButils.execQuery(
-    `insert into FavoritePlayers values ('${user_id}',${player_id})`
+    `insert into FavoritePlayers values ('${user_id}',${player_id}')`
   );
 }
 
@@ -13,5 +13,21 @@ async function getFavoritePlayers(user_id) {
   return player_ids;
 }
 
+async function markGamesAsFavorite(username, game_id) {
+  await DButils.execQuery(
+    `insert into favoriteGames_db values ('${username}',${game_id})`
+  );
+}
+
+async function getFavoriteGames(username) {
+  const game_ids = await DButils.execQuery(
+    `select game_id from favoriteGames_db where username='${username}'`
+  );
+  return game_ids;
+}
+
+
 exports.markPlayerAsFavorite = markPlayerAsFavorite;
 exports.getFavoritePlayers = getFavoritePlayers;
+exports.markGamesAsFavorite = markGamesAsFavorite;
+exports.getFavoriteGames = getFavoriteGames;
